# apollo-swarm

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/apollo-swarm/: Cargo.toml
programs/apollo-swarm/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/apollo-swarm/src/instructions/: mod.rs
programs/apollo-swarm/src/instructions/agent/: mod.rs  register.rs  update.rs
programs/apollo-swarm/src/instructions/swarm/: add_member.rs  create.rs  mod.rs  remove_member.rs
programs/apollo-swarm/src/instructions/task/: accept.rs  approve.rs  complete.rs  create.rs  fail.rs  mod.rs  verify.rs
programs/apollo-swarm/src/instructions/treasury/: deposit.rs  mod.rs  settle.rs
programs/apollo-swarm/src/state/: agent.rs  approval.rs  membership.rs  mod.rs  swarm.rs  task.rs
runtime/: package.json
runtime/src/: handlers.ts  index.ts  orchestrator.ts
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  index.ts  pdas.ts  types.ts
tests/: apollo-swarm.ts
