[package]
name = "apollo-swarm"
version = "0.1.0"
description = "Apollo Swarm — sovereign multi-agent coordination on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "apollo_swarm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
